--- a/app.json
+++ b/app.json
@@ -14,7 +14,9 @@
         "notify": "/components/common/notify/notify",
         "popup": "/components/common/popup/popup",
         "linkbar": "/components/common/linkbar/linkbar",
-        "tabs": "/components/common/tabs/tabs"
+        "tabs": "/components/common/tabs/tabs",
+        "wf-icon": "/components/common/wf-icon/wf-icon"
+
 
 
     }
