--- a/app.json
+++ b/app.json
@@ -15,7 +15,9 @@
         "popup": "/components/common/popup/popup",
         "linkbar": "/components/common/linkbar/linkbar",
         "tabs": "/components/common/tabs/tabs",
-        "wf-icon": "/components/common/wf-icon/wf-icon"
+        "wf-icon": "/components/common/wf-icon/wf-icon",
+        "wf-loading": "/components/common/wf-loading/wf-loading"
+
 
 
 
