dropdown-menu 下拉菜单组件

--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
         "tabs": "/components/common/tabs/tabs",
         "wf-icon": "/components/common/wf-icon/wf-icon",
         "wf-loading": "/components/common/wf-loading/wf-loading",
-        "number-keyboard": "/components/common/number-keyboard/number-keyboard"
+        "number-keyboard": "/components/common/number-keyboard/number-keyboard",
+        "dropdown-menu": "/components/common/dropdown-menu/dropdown-menu"
+
 
 
 
