dropdown-menu-group

--- a/app.json
+++ b/app.json
@@ -18,7 +18,9 @@
         "wf-icon": "/components/common/wf-icon/wf-icon",
         "wf-loading": "/components/common/wf-loading/wf-loading",
         "number-keyboard": "/components/common/number-keyboard/number-keyboard",
-        "dropdown-menu": "/components/common/dropdown-menu/dropdown-menu"
+        "dropdown-menu": "/components/common/dropdown-menu/dropdown-menu",
+        "dropdown-menu-group": "/components/common/dropdown-menu-group/dropdown-menu-group"
+
 
 
 
