--- a/project.config.json
+++ b/project.config.json
@@ -45,6 +45,13 @@
 					"id": -1,
 					"name": "index",
 					"pathName": "pages/index/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "about",
+					"pathName": "pages/about/about",
 					"scene": null
 				}
 			]
